[tool.poetry]
name = "preview-ahk-gen"
version = "0.1.0"
description = ""
authors = ["mshafer1"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.1.1"
pytest-snapshot = "^0.4.2"
pytest-subtests = "^0.3.2"
selenium = "^3.141.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
    line-length = 100
    target-version = ['py37']
    include = '\.pyi?$'
    exclude = '''
    (
    /(
        \.eggs         # exclude a few common directories in the
        | \.git          # root of the project
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _venv
        | _build
        | buck-out
        | build
        | dist
    )/
    )
    '''
